feat: update to only add polygons, load COGs externally on click

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div> 
     </div>
 
-    <div class="container fixed-bottom m-4">
+    <!-- <div class="container fixed-bottom m-4">
       <div class="row p-1 justify-content-end">
         <div class="col-sm-auto">
           <table class="controls">
@@ -89,7 +89,7 @@
           </table>
         </div>
       </div> 
-    </div>
+    </div> -->
 
   </body>
 </html>
